--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,15 @@ body {
     margin: 0 auto;
     margin-top: 5em;
 }
+
+.music {
+    border: 1px solid #dddddd;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+.music-title {
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: 700;
+}
