--- a/css/main.css
+++ b/css/main.css
@@ -51,12 +51,14 @@ body {
 
 .music {
     border: 1px solid #dddddd;
-    margin: 10px 0;
+    margin: 2em 0;
     padding: 10px;
+    border-radius: 5px;
 }
 
 .music-title {
     text-transform: uppercase;
     font-size: 1.5em;
     font-weight: 700;
+    margin-bottom: 10px;
 }
