--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
 
 body {
     font-family: 'Pretendard';
+    background: #f8f8f8;
 }
 
 * {
@@ -50,6 +51,7 @@ body {
 }
 
 .music {
+    background: white;
     border: 1px solid #dddddd;
     margin: 2em 0;
     padding: 10px;
