--- a/css/main.css
+++ b/css/main.css
@@ -45,10 +45,12 @@ body {
 }
 
 #content-box {
+    display: flex;
     width: 100%;
     max-width: 700px;
     margin: 0 auto;
     margin-top: 5em;
+    gap: 20px;
 }
 
 .music {
@@ -66,6 +68,96 @@ body {
     margin-bottom: 10px;
 }
 
+.music-title a {
+    color: black;
+    text-decoration: none;
+}
+
 a {
     color: var(--accent);
+    text-decoration: none;
+}
+
+.bx-play-circle {
+    color: var(--accent);
+}
+
+.mainbox {
+    box-shadow: 5px 5px 5px #00000011;
+}
+
+#img-box {
+    width: 256px;
+    height: 256px;
+    overflow: hidden;
+    border-radius: 15px;
+    margin-bottom: 15px;
+}
+
+#img-box > img {
+    margin: 0;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    object-position: center;
+}
+
+#controller-box {
+    width: 100%;
+    height: 100px;
+    border-radius: 15px;
+    background-color: white;
+    flex-direction: column;
+    display: flex;
+    padding: 10px;
+    gap: 10px;
+}
+
+#playbar-box {
+    width: 100%;
+    height: 1.5em;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+#playbar {
+    height: 1px;
+    width: 100%;
+    background-color: black;
+}
+
+#playdot {
+    position: absolute;
+    top: 0.5em;
+    left: -0.25em;
+    background-color: black;
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 50%;
+}
+
+#playpause-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+.playpause {
+    font-size: 2.4em;
+}
+
+.replay {
+    font-size: 1.5em;
+}
+
+.volume {
+    font-size: 1.4em;
+}
+
+#player-list {
+    flex-grow: 1;
+    max-width: 400px;
+    border-radius: 15px;
 }
