--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 }
 
 :root {
-    --accent: #ffa358;
+    --accent: #ff9899;
 }
 
 body {
@@ -23,6 +23,14 @@ body {
 
 * {
     box-sizing: border-box;
+}
+
+#app {
+    display: flex;
+    width: 100%;
+    height: calc(100vh - 3em);
+    align-items: center;
+    justify-content: center;
 }
 
 #nav-box {
@@ -51,6 +59,7 @@ body {
     margin: 0 auto;
     margin-top: 5em;
     gap: 20px;
+    max-height: 370px;
 }
 
 .music {
@@ -78,12 +87,12 @@ a {
     text-decoration: none;
 }
 
-.bx-play-circle {
-    color: var(--accent);
-}
-
 .mainbox {
     box-shadow: 5px 5px 5px #00000011;
+}
+
+.inactive {
+    opacity: 0.5;
 }
 
 #img-box {
@@ -110,31 +119,44 @@ a {
     flex-direction: column;
     display: flex;
     padding: 10px;
-    gap: 10px;
+    gap: 5px;
 }
 
 #playbar-box {
+    margin-top: 2px;
     width: 100%;
     height: 1.5em;
     display: flex;
+    flex-direction: column;
     align-items: center;
     position: relative;
 }
 
-#playbar {
+.rangeInput {
     height: 1px;
+    background: black;
+    outline: none;
+    transition: background 450ms ease-in;
+    -webkit-appearance: none;
+    accent-color: black;
     width: 100%;
-    background-color: black;
 }
 
-#playdot {
-    position: absolute;
-    top: 0.5em;
-    left: -0.25em;
-    background-color: black;
-    width: 0.5em;
-    height: 0.5em;
+.rangeInput::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background: black;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
+    cursor: pointer;
+  }
+
+#duration-box {
+    margin-top: 5px;
+    display: flex;
+    font-size: 0.7em;
+    width: 100%;
+    justify-content: space-between;
 }
 
 #playpause-box {
@@ -156,8 +178,90 @@ a {
     font-size: 1.4em;
 }
 
+#volume-box {
+    position: absolute;
+    width: 100px;
+    z-index: 999;
+    margin-left: 300px;
+    background: white;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #00000011;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
 #player-list {
-    flex-grow: 1;
     max-width: 400px;
     border-radius: 15px;
+    background-color: white;
+    width: 100vw;
+    padding: 10px;
+    overflow-y: auto;
+}
+
+#player-overflow {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.nowplaying {
+    background-color: #00000005 !important;
+}
+
+.play-title-box {
+    width: 100%;
+    display:flex;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid #00000011;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.play-play-box {
+    width: calc(100% - 30px);
+    display:flex;
+    gap: 10px;
+    align-items: center;
+    padding: 10px;
+}
+
+.play-title {
+    margin-bottom: 5px;
+}
+
+.play-user {
+    font-size: 0.8em;
+}
+
+.play-img-box {
+    width: 60px;
+    height: 60px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.play-img-box > img {
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.play-title-box > a{
+    height: 100%;
+}
+
+.play-link-box {
+    width: 30px;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    font-size:2em;
+    align-items: center;
+    color: black;
 }
